--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,2 +1,6 @@
 /* Variables and mixins declared here will be available in all other SCSS files */ /* https://github.com/jgthms/bulma/issues/1293 */
+@import 'node_modules/bulma/sass/utilities/_all.sass';
+// @import 'node_modules/bulma/sass/base/_all.sass';
 $body-overflow-y: auto;
+$super-color:darken(yellow,100);
+$success: darken($green,100);
